# xfg-stark

./: COLDAOGovernor.sol  COLDDepositProofVerifier.sol  COLDProofVerifier_v3.sol  COLD_BRANCH_SUMMARY.md  COLD_V3_FINAL_UPDATE.md  COLD_VS_HEAT_COMPARISON.md  Cargo.toml  DEPLOYMENT_CHECKLIST_V3.md  FuegoCOLDAOToken.sol  HEATBurnProofVerifier.sol  HEATBurnProofVerifier_v3.sol  HEATToken.sol  IMPLEMENTATION_SUMMARY_V3.md  LICENSE  LPRewardsManager.sol  README.md  TierConversions.sol
.github/workflows/: release-stark-cli.yml
docs/: README.md  XFG_STARK_PROOF_USER_GUIDE.md
interfaces/: IEldernodeVerifier.sol
scripts/: build-cli.sh
src/: burn_mint_air.rs  burn_mint_prover.rs  burn_mint_verifier.rs  lib.rs  proof_data_schema.rs  test_data_generator.rs
src/benchmarks/: mod.rs  winterfell_benchmarks.rs
src/types/: stark.rs
